@@ -1,3 +1,9 @@
+2004-06-14  Dafydd Harries  <daf@muse.19inch.net>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	Ngettextise some strings.
+
 2004-06-13  Laurent Sansonetti  <lrz@gnome.org>
 
 	* data/post-clean.rb:
